--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^92.0.0",
     "mongoose": "^6.0.10"
   }
 }
