--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "node": "16.13.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^92.0.0",
-    "mongoose": "^6.0.10"
+    "mongoose": "^6.0.10",
+    "otplib": "^12.0.1"
   }
 }
